--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "mocha": "^8.1.3",
     "typescript": "^4.1.2",
     "vscode-test": "^1.4.1"
+  },
+  "dependencies": {
+    "vsce": "^1.83.0"
   }
 }
