Feature/6 pop up time tracking (#1)
* add time tracking command and initialize start time with one hour increment

* set up for beta publishing and TA testing

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "Other"
   ],
   "activationEvents": [
-    "onCommand:be-human.helloWorld"
+    "*"
   ],
   "main": "./extension.js",
   "contributes": {
@@ -18,6 +18,10 @@
       {
         "command": "be-human.helloWorld",
         "title": "Hello World"
+      },
+      {
+        "command": "be-human.trackTime",
+        "title": "Time Tracking"
       }
     ]
   },
