--- a/package.json
+++ b/package.json
@@ -40,5 +40,9 @@
     "mocha": "^8.1.3",
     "typescript": "^4.1.2",
     "vscode-test": "^1.4.1"
+  },
+  "dependencies": {
+    "pg": "^8.5.1",
+    "pg-pool": "^3.2.2"
   }
 }
