--- a/package.json
+++ b/package.json
@@ -40,5 +40,10 @@
     "mocha": "^8.1.3",
     "typescript": "^4.1.2",
     "vscode-test": "^1.4.1"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "fs": "^0.0.1-security",
+    "supertest": "^6.0.1"
   }
 }
