--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "displayName": "be-human",
   "description": "",
   "version": "0.0.1",
+  "publisher": "Not-Bot",
   "engines": {
     "vscode": "^1.52.0"
   },
@@ -40,5 +41,8 @@
     "mocha": "^8.1.3",
     "typescript": "^4.1.2",
     "vscode-test": "^1.4.1"
+  },
+  "dependencies": {
+    "vsce": "^1.83.0"
   }
 }
