fix display name on publish

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "be-human",
-  "displayName": "be-human",
+  "displayName": "beHuman",
   "description": "",
   "version": "0.1.0",
   "publisher": "Not-Bot",
