--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "be-human",
-  "displayName": "be-human",
+  "displayName": "beHuman",
   "description": "",
-  "version": "0.0.1",
+  "version": "0.1.1",
   "publisher": "Not-Bot",
   "engines": {
     "vscode": "^1.52.0"
