--- a/package.json
+++ b/package.json
@@ -24,8 +24,27 @@
         "command": "be-human.trackTime",
         "title": "Time Tracking"
       }
-    ]
+    ],
+
+    "configuration": {
+  
+      "title": "be-human",
+      "properties": {
+      "be-human.timeInterval": {
+        
+        "type": "number",
+        "default": 60,
+        "description": "command sets alert time interval in minutes"
+      
+        }
+      }
+    }
   },
+
+
+
+
+
   "scripts": {
     "lint": "eslint .",
     "pretest": "npm run lint",
