added command functions to package.json and extension.js

--- a/package.json
+++ b/package.json
@@ -23,27 +23,31 @@
       {
         "command": "be-human.trackTime",
         "title": "Time Tracking"
+      },
+      {
+        "command": "be-human.resetTime",
+        "title": "Reset Time Tracking"
+      },
+      {
+        "command": "be-human.pauseStart",
+        "title": "Pause Time Tracking"
+      },
+      {
+        "command": "be-human.pauseStop",
+        "title": "Resume Time Tracking"
       }
     ],
-
     "configuration": {
-  
       "title": "be-human",
       "properties": {
       "be-human.timeInterval": {
-        
         "type": "number",
         "default": 60,
         "description": "command sets alert time interval in minutes"
-      
         }
       }
     }
   },
-
-
-
-
 
   "scripts": {
     "lint": "eslint .",
