--- a/package.json
+++ b/package.json
@@ -23,7 +23,26 @@
       {
         "command": "be-human.trackTime",
         "title": "Time Tracking"
+      },
+      {
+        "command": "be-human.resetTime",
+        "title": "Reset Time Tracking"
       }
+    ],
+    "configuration": {
+      "title": "be-human",
+      "properties": {
+      "be-human.timeInterval": {
+        "type": "number",
+        "default": 60,
+        "description": "command sets alert time interval in minutes"
+        }
+      }
+
+    }
+  },
+
+
     ],
 
     "configuration": {
