--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "be-human",
   "displayName": "beHuman",
   "description": "",
+  "icon" : "./images/largeVector.png",
   "version": "0.1.1",
   "publisher": "Not-Bot",
   "engines": {
@@ -37,6 +38,7 @@
         "default": 60,
         "description": "command sets alert time interval in minutes"
         }
+
       }
 
     }
@@ -56,12 +58,10 @@
         "description": "command sets alert time interval in minutes"
       
         }
+
       }
     }
   },
-
-
-
 
 
   "scripts": {
