fetch random tip and add to info message

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "be-human",
   "displayName": "beHuman",
   "description": "",
-  "icon" : "./images/largeVector.png",
+  "icon": "./images/largeVector.png",
   "version": "0.1.1",
   "publisher": "Not-Bot",
   "engines": {
@@ -33,25 +33,23 @@
     "configuration": {
       "title": "be-human",
       "properties": {
-      "be-human.timeInterval": {
-        "type": "number",
-        "default": 60,
-        "description": "command sets alert time interval in minutes"
+        "be-human.timeInterval": {
+          "type": "number",
+          "default": 60,
+          "description": "command sets alert time interval in minutes"
         }
       }
     }
   },
-    "configuration": {
-  
-      "title": "be-human",
-      "properties": {
+  "configuration": {
+    "title": "be-human",
+    "properties": {
       "be-human.timeInterval": {
-        
         "type": "number",
         "default": 60,
         "description": "command sets alert time interval in minutes"
-        }
       }
+    }
   },
   "scripts": {
     "lint": "eslint .",
@@ -70,6 +68,7 @@
     "vscode-test": "^1.4.1"
   },
   "dependencies": {
+    "superagent": "^6.1.0",
     "vsce": "^1.83.0"
   }
 }
