--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
       {
         "command": "be-human.resetTime",
         "key": "ctrl+alt+r",
-        "mac": "cmd+cmd+r",
+        "mac": "ctrl+cmd+r",
         "when": "editorTextFocus"
       }
     ],
