--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "be-human",
   "displayName": "beHuman",
   "description": "",
-  "icon": "./images/largeVector.png",
-  "version": "0.1.1",
+  "icon": "largeVector.png",
+  "version": "0.1.3",
   "publisher": "Not-Bot",
   "engines": {
     "vscode": "^1.52.0"
@@ -26,7 +26,7 @@
       {
         "command": "be-human.resetTime",
         "key": "ctrl+alt+r",
-        "mac": "cmd+cmd+r",
+        "mac": "ctrl+cmd+r",
         "when": "editorTextFocus"
       }
     ],
