add note to let user know restart of VSCode is required if changing time interval

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
         "be-human.timeInterval": {
           "type": "number",
           "default": 60,
-          "description": "command sets alert time interval in minutes"
+          "description": "command sets alert time interval in minutes (requires restart of VSCode)"
         }
       }
     }
